# Furhat-Conversational-AI

./: README.md
Projects/vision-enabled-dialogue-0.2.0/: LICENSE.txt  README.md  main.py  main_furhat.py  package.xml  setup.cfg  setup.py
Projects/vision-enabled-dialogue-0.2.0/vision_enabled_dialogue/: conversation.py  llm.py  main_ros.py  messages.py
