<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_enabled_dialogue</name>
  <version>0.0.0</version>
  <description>vision_enabled_dialogue</description>
  <maintainer email="giubots@protonmail.com">giubots</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tts_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
